--- a/diary/inc/style.css
+++ b/diary/inc/style.css
@@ -4,8 +4,8 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    margin-top: -180px;
-    margin-left: -80px;
+    margin-top: -10%;
+    margin-left: -8%;
     color: #2A4F6F;
 }
 body {
