--- a/diary/inc/style.css
+++ b/diary/inc/style.css
@@ -6,6 +6,16 @@ font-family: Arial, Helvetica, sans-serif;
 border-top: 2px solid #2A4F6F;
 background-image: url('fon.gif');
 }
+h1 { font: 150% Georgia, "Times New Roman", Times, serif;}
+input {width: 200px;}
+table caption{ font: 24px Georgia; }
+table{width: 800px; border-collapse: collapse;}
+th{background: black; color: white;}
+tr:nth-child(even){background: #f3f3f3}
+tr:nth-child(odd){background: #ddd}
+td:nth-child(n+2), th:nth-child(n+2){width: 120px; text-align: center;}
+td:nth-child(1) {width: 100%; text-align: center; background: yellow;}
+
 #nav{
 position: absolute;
 top: 5em;
@@ -51,36 +61,22 @@ font: 90% Georgia, "Times New Roman", Times, serif;
 color: #2A4F6F;
 background-color: transparent;
 }
-h1 {
-    font: 150% Georgia, "Times New Roman", Times, serif;
-}
 #mypanel {
-    width: 160px;
-    height: 80px;
     position: fixed;
+    width: 200px;
+    height: 120px;
     top: 50%;
     left: 50%;
-    margin-top: -10%;
-    margin-left: -8%;
+    margin-top: -60px;
+    margin-left: -100px;
     color: #2A4F6F;
 }
-
 #dashed-line {
-    margin-top: 0px;
+    margin-top: 0;
     position: absolute;
-    margin-left: 12em;
+    margin-left: 13em;
     width: 0;
     height: 99%;
     border: 0;
     border-left: 2px solid red;
 }
-
-
-table caption{ font: 24px Georgia; }
-table{width: 800px; border-collapse: collapse;}
-th{background: black; color: white;}
-tr:nth-child(even){background: #f3f3f3}
-tr:nth-child(odd){background: #ddd}
-td:nth-child(n+2), th:nth-child(n+2){width: 120px; text-align: center;}
-td:nth-child(1) {width: 300px; text-align: center; background: yellow;}
-/*tr:last-child{text-align: right; font-weight: bold;}*/
