--- a/diary/inc/style.css
+++ b/diary/inc/style.css
@@ -70,6 +70,10 @@ background-color: transparent;
     margin-top: -60px;
     margin-left: -100px;
     color: #2A4F6F;
+    text-align: center;
+}
+#mypanel input{
+    text-align: center;
 }
 #dashed-line {
     margin-top: 0;
