--- a/mvc/public/css/default.css
+++ b/mvc/public/css/default.css
@@ -2,17 +2,19 @@ body {
     background: silver;
 }
 
+input {width: 200px;}
+
 #header {
-    padding: 20px;
-    background: gold;
+padding: 20px;
+background: gold;
 }
 
 #content {
-    background: #fff;
-    padding: 20px;
+background: #fff;
+padding: 20px;
 }
 
 #footer {
-    background: green;
-    padding: 20px;
+background: green;
+padding: 20px;
 }
