--- a/eland/inc/style.css
+++ b/eland/inc/style.css
@@ -1,37 +1,71 @@
-body {
-    background: transparent url("../img/bg.png") repeat-x scroll 100% 0;
-    margin: 0 auto;
+html, body {
+    margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent url("../img/bg.png") repeat-x scroll 100% 0;
+}
+#header {
+    margin: 0 auto;
     max-width: 990px;
     min-width: 990px;
     color: #000000;
     font-family: Arial, Helvetica, sans-serif;
 }
 ul {
+    font-family: "Times New Roman";
     list-style: none;
-    margin-left: 10em;
+    margin: 5px auto;
     padding-left: 0;
+    text-align: center;
 }
 ul li {
     display:inline-block;
-    font-family: "Times New Roman" ;
     font-size: 150%;
-    color: #000;
+    padding-left: 10px;
+    padding-right: 10px;
+}
 
-    margin-right: 2px;
+li a {
+    text-decoration: none;
+}
 
+li a:visited {
+    color: #999999;
+}
+li a:hover {
+    color: #656363;
+    /*color: #d65c5c;*/
 }
 #topmenu {
-    border-bottom: 2px solid #f0f0f0;
-    border-top: 2px solid #f0f0f0;
+    margin: auto;
+    max-width: 990px;
+    min-width: 990px;
+    border-bottom: 2px solid #ebebeb;
+    border-top: 2px solid #dfdfdf;
 }
 
 #showHere {
-    padding-top: 5px;
-    margin-top: 5px;
+    margin:auto;
+    max-width: 990px;
+    min-width: 990px;
+    padding-top: 15px;
+    color: #585858;
+
 }
 #footer {
-    border-top: 2px solid #f0f0f0;
-    padding-top: 5px;
-    margin: auto;
+    position: absolute;
+    clear: both;
+    text-align: center;
+    margin-top: 15px;
+    padding-top: 15px;
+    font: 90% Georgia, "Times New Roman", Times, serif;
+    color: #fbfbfb;
+    background-color: #585858;
+    height: 2em;
+    width: 100%;
+    bottom: 0;
 }
+
+#footer a:visited { color: #fbfbfb; }
+#footer a:hover { color: #d65c5c; }
