--- a/eland/inc/style.css
+++ b/eland/inc/style.css
@@ -1,8 +1,6 @@
 html, body {
-    margin: 0;
-    padding: 0;
+    margin: auto;
     width: 100%;
-    height: 100%;
     background: transparent url("../img/bg.png") repeat-x scroll 100% 0;
 }
 #header {
@@ -55,7 +53,7 @@ li a:hover { color: #656363; /*color: #d65c5c;*/}
     min-width: 990px;
     min-height: 75%;
     padding: 10px;
-    border: 1px solid #d65c5c;
+    border: 1px dotted #d65c5c;
 
 }
 #footer {
