--- a/eland/inc/style.css
+++ b/eland/inc/style.css
@@ -1,69 +1,69 @@
-html {
+html body {
     background: transparent url("../img/bg.png") repeat-x scroll 100% 0;
 }
 #body {
     padding: 0;
     margin: 0 auto;
-    width: 100%;
-}
-#header {
-    margin: 0 auto;
     max-width: 990px;
     min-width: 990px;
+    width: 100%;
+}
+#basket {
+    position: inherit;
+}
+#header {
     color: #000000;
     font-family: Arial, Helvetica, sans-serif;
 }
-ul {
+#topmenu ul {
     font-family: "Times New Roman";
     list-style: none;
     margin: 5px auto;
     padding-left: 0;
     text-align: center;
 }
-ul li {
+#topmenu ul li {
     display:inline-block;
     font-size: 150%;
     padding-left: 10px;
     padding-right: 10px;
 }
 
-li a {
+#topmenu li a {
     text-decoration: none;
 }
 
-li a:visited, li a:active, li a:link { color: #999999; }
-li a:hover { color: #656363; }
+#topmenu li a:visited, #topmenu li a:active, #topmenu li a:link { color: #999999; }
+#topmenu li a:hover { color: #656363; }
 
 #topmenu {
-    margin: auto;
-    max-width: 990px;
-    min-width: 990px;
     border-bottom: 2px solid #ebebeb;
     border-top: 2px solid #dfdfdf;
 }
+#right_menu  ul {
+    list-style: none;
+}
+
 #right_menu {
-    
+    width: 200px;
+    position: absolute;
+    margin-left: 200px;
 }
 
 #showHere {
-    margin:auto;
-    max-width: 990px;
-    min-width: 990px;
     padding-top: 15px;
     color: #585858;
 
 }
 #main {
-    margin: 15px auto;
-    max-width: 990px;
-    min-width: 990px;
+    margin: 15px 0;
     min-height: 75%;
     padding: 10px;
     border: 1px dotted #d65c5c;
 
 }
 #footer {
-    position: absolute;
+    position: fixed;
     clear: both;
     text-align: center;
     margin-top: 15px;
