--- a/eland/inc/style.css
+++ b/eland/inc/style.css
@@ -1,6 +1,9 @@
 html body {
+    margin: 0;
+    padding: 0;
     background: transparent url("../img/bg.png") repeat-x scroll 100% 0;
 }
+
 #body {
     padding: 0;
     margin: 0 auto;
@@ -8,12 +11,19 @@ html body {
     min-width: 990px;
     width: 100%;
 }
+
 #basket {
     position: inherit;
 }
+
 #header {
     color: #000000;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#topmenu {
+    border-bottom: 2px solid #ebebeb;
+    border-top: 2px solid #dfdfdf;
 }
 #topmenu ul {
     font-family: "Times New Roman";
@@ -28,33 +38,23 @@ html body {
     padding-left: 10px;
     padding-right: 10px;
 }
-
-#topmenu li a {
-    text-decoration: none;
-}
-
+#topmenu li a { text-decoration: none; }
 #topmenu li a:visited, #topmenu li a:active, #topmenu li a:link { color: #999999; }
 #topmenu li a:hover { color: #656363; }
-
-#topmenu {
-    border-bottom: 2px solid #ebebeb;
-    border-top: 2px solid #dfdfdf;
-}
-#right_menu  ul {
-    list-style: none;
-}
 
 #right_menu {
     width: 200px;
     position: absolute;
     margin-left: 200px;
 }
+#right_menu  ul { list-style: none; }
 
 #showHere {
     padding-top: 15px;
     color: #585858;
 
 }
+
 #main {
     margin: 15px 0;
     min-height: 75%;
@@ -62,6 +62,7 @@ html body {
     border: 1px dotted #d65c5c;
 
 }
+
 #footer {
     position: fixed;
     clear: both;
@@ -75,6 +76,5 @@ html body {
     width: 100%;
     bottom: 0;
 }
-
 #footer a:visited, #footer a:active, #footer a:link { color: #fbfbfb; }
 #footer a:hover { color: #d65c5c; }
