--- a/eland/inc/style.css
+++ b/eland/inc/style.css
@@ -66,9 +66,18 @@ html body {
 
 #main {
     max-width: 770px;
-    margin: 0;
+    margin: 0 0 3em 0;
     padding: 10px;
     border: 1px dotted #d65c5c;
+    text-align: justify;       /* Выравнивание текста по ширине блока*/
+}
+#main h2 {
+    text-align: center;
+    color: #d65b5b;
+    font-size: 100%;
+    font-family: "Times New Roman",arial,serif;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 1px #fff;
 }
 
 #footer {
