--- a/mvc/public/css/basket.css
+++ b/mvc/public/css/basket.css
@@ -22,6 +22,8 @@
     border-top-left-radius: 3px;
 }
 
+.basket_order a { text-decoration: none; color: white}
+
 .basket_arr {
     background: #d65c5c url("../img/icon-down.png") no-repeat scroll center;
     display: inline-block;
