--- a/pb/style.css
+++ b/pb/style.css
@@ -1,6 +1,9 @@
 html, body {
     margin: 0;
     padding: 0;
+    background: url("bg-main.jpg") 100% 100% no-repeat;
+    background-size: auto 100%;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .header {
@@ -9,7 +12,6 @@ html, body {
     left: 0;
     background: rgba(101, 164, 73, 0.94);
     min-width: 50px;
-    display: inline;
 }
 .header img {
     float: left;
@@ -26,15 +28,11 @@ html, body {
     text-decoration: none;
     color: white;
 }
+.header a:hover {
+    text-decoration: none;
+    background-color: #eee;
+}
 .header ul {
     float: right;
     margin-right: 20%;
-}
-
-
-
-.main img {
-    height: auto;
-    width: auto;
-    margin-top: 50px;
 }
