--- a/pb/public/css/style.css
+++ b/pb/public/css/style.css
@@ -50,15 +50,54 @@ html, body {
     left: 50%;
     top:10%;
 }
+.main {
+    padding: 15px;
+}
 
 .main h1, .main h2 {
     text-align: center;
     font-family: "Times New Roman", arial, serif ;
 }
 #bottom {
-    text-decoration: none;
+    cursor: pointer;
+    width: 150px;
     color: white;
     padding: 13px 25px;
     background-color: orange;
     border-radius: 5px;
+    text-align: center;
+}
+
+.front {
+    display: none;
+    background: rgba(255,255,255,0.5);
+    height: 100%;
+    opacity: 0.9;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+}
+.popup {
+    display: none;
+    position: fixed;
+    background-color: white;
+    height: 500px;
+    width: 650px;
+    top: 150px;
+    left: 29%;
+    color: #000;
+    padding: 20px 30px 30px;
+    z-index: 1001;
+    border-radius: 7px;
+}
+.career_left {
+    float: left;
+    width: 50%;
+    text-align: justify;
+    padding-right: 30px;
+}
+.career_right {
+    padding-left: 30px;
 }
