--- a/pb/public/css/style.css
+++ b/pb/public/css/style.css
@@ -11,7 +11,7 @@ html, body {
     left: 0;
     background: rgba(101, 164, 73, 0.75);
     min-width: 50px;
-    z-index: 1002;
+    z-index: 999;
 }
 .header img {
     float: left;
@@ -95,12 +95,21 @@ html, body {
     background-color: white;
     height: 500px;
     width: 650px;
-    top: 150px;
-    left: 29%;
+    top: 50%;
+    left: 50%;
+    margin-left: -325px;
+    margin-top: -250px;
     color: #000;
     padding: 20px 30px 30px;
     z-index: 1001;
     border-radius: 7px;
+}
+.popup input {
+    width: 200px;
+    height: 30px;
+    border-radius: 3px;
+    box-shadow: none;
+    margin: 5px 15px;
 }
 .career_left {
     float: left;
@@ -113,10 +122,12 @@ html, body {
 }
 .about {
     overflow-y: scroll;
-    height: 400px;
+    min-height: 400px;
+    max-height: 580px;
 }
 .about td, .about th {
     text-align: justify;
     padding: 7px;
+    border: solid 1px;
 }
 .about th { text-align: center;}
