--- a/pb/public/css/style.css
+++ b/pb/public/css/style.css
@@ -128,10 +128,12 @@ html, body {
     border-radius: 7px;
 }
 .popup input {
-    width: 200px;
+    border:1px solid #aaa;
+    box-shadow: 0px 0px 3px #ccc, 0 10px 15px #eee inset;
+    border-radius:2px;
+    width:220px;
+    padding:5px 8px;
     height: 30px;
-    border-radius: 3px;
-    box-shadow: none;
     margin: 5px 15px;
 }
 .popup img {
@@ -139,6 +141,13 @@ html, body {
     height: 32px;
     cursor: pointer;
     float: right;
+}
+.popup label {
+    width:200px;
+    margin-top: 3px;
+    display:inline-block;
+    float:left;
+    padding:3px;
 }
 .career_left {
     float: left;
@@ -149,9 +158,9 @@ html, body {
     padding-right: 50px;
 }
 .career_left img {
-    margin-top: 40px;
-    width:500px;
-    height:300px;
+    margin: 50px 0;
+    width: 500px;
+    height: 320px;
 }
 .career_right {
     padding-left: 50px;
