--- a/pb/public/css/style.css
+++ b/pb/public/css/style.css
@@ -39,7 +39,7 @@ html, body {
     margin-right: 13%;
     list-style: none;
 }
-.login {
+.login_bot {
     position: fixed;
     right: 5%;
     top: 16px;
@@ -127,7 +127,7 @@ html, body {
     z-index: 1001;
     border-radius: 7px;
 }
-.popup input {
+.popup input, .login input {
     border:1px solid #aaa;
     box-shadow: 0px 0px 3px #ccc, 0 10px 15px #eee inset;
     border-radius:2px;
@@ -135,6 +135,16 @@ html, body {
     padding:5px 8px;
     height: 30px;
     margin: 5px 15px;
+}
+.login input {text-align: center}
+.login {
+    position: absolute;
+    width: 220px;
+    height: 200px;
+    top: 50%;
+    left: 50%;
+    margin-left: -110px;
+    margin-top: -100px;
 }
 .popup img {
     width: 32px;
