--- a/pb/public/css/style.css
+++ b/pb/public/css/style.css
@@ -75,7 +75,7 @@ html, body {
     text-align: center;
     font-family: "Times New Roman", arial, serif ;
 }
-#bottom {
+.mybottom p {
     float: left;
     cursor: pointer;
     width: 150px;
@@ -91,10 +91,10 @@ html, body {
     width: 450px;
     font-size: 10px;
 }
-.push {
+.popup input:last-child {
+    box-shadow: none;
     text-align: center;
     font-size: 16px;
-    width: 250px;
     color: white;
     background-color: orange;
 }
@@ -164,11 +164,11 @@ html, body {
     width: 50%;
     height: 500px;
     text-align: justify;
-    font-size: 13px;
+    font-size: 14.5px;
     padding-right: 50px;
 }
 .career_left img {
-    margin: 50px 0;
+    margin: 30px 0;
     width: 500px;
     height: 320px;
 }
